# phoenix

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.json  docker-compose.yml  go.mod
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/phoenix/: agent_create_test.go  agent_sock_test.go  emergency_test.go  exec_test.go  import_1password.go  import_1password_test.go  main.go  main_export_audit_test.go  mcp.go  mcp_http.go  mcp_seal_test.go  mcp_test.go  policy_test.go  seal_test.go  session_test.go  set_test.go  signing_test.go  status.go  verify.go
cmd/phoenix-server/: main.go
docs/: admin-token-lifecycle.md  api-reference-index.md  authentication.md  cli-usage.md  configuration.md  dashboard.md  getting-started.md  integrations.md  key-management.md  lan-deployment.md  migration-env-to-phoenix.md  multi-agent-setup.md  policy-and-attestation.md  reference-only-enforcement-design.md  release-runbook.md  roadmap.md  sealed-responses.md  session-identity.md  threat-model.md
examples/: README.md
examples/01-local-quickstart/: run.sh
examples/02-exec-output-env/: run.sh
examples/03-acl-strictness/: run.sh
examples/lib/: common.sh
internal/acl/: acl.go  acl_test.go
internal/agent/: agent.go  agent_test.go  peercred_linux.go  peercred_other.go  startup_test.go
phoenix-skill/: SKILL.md
scripts/: install.sh
sdk/python/: pyproject.toml
sdk/python/phoenix_secrets/: __init__.py  client.py
sdk/python/tests/: test_client.py  test_sealed.py
(+63 files in other folders)
